--- a/public/orb.html
+++ b/public/orb.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Vapi is the platform to build, test and deploy voicebots in minutes rather than months."
+      content="Tavonni Voice is the platform to build, test and deploy voicebots in minutes rather than months."
     />
     <meta property="og:title" content="Tavonni Voice" />
     <meta
@@ -33,7 +33,7 @@
       content="Tavonni Voice AI for any application."
     />
     <meta property="twitter:image" content="https://vapi.ai/og.png" />
-    <title>Vapi - Voice AI for any application.</title>
+    <title>Tavonni Voice - Voice AI for any application.</title>
     <script type="module" crossorigin src="index.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
